--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<td width="50%" align="center"><img src="Konten-3.jpeg" width="100%" align="center"></td>
 		</tr>
 		<tr>
-			<td width="50%" align="center"><img src="Konten-4.gif." width="100%" align="center"></td>
+			<td width="50%" align="center"><img src="Konten-4.gif" width="100%" align="center"></td>
 			<td width="50%"><h2>Download selected files with one click</h2>
 			When several links are selected with a mouse in a browser, IDM will show "Download with IDM" button. You can also minimize this button in IDM Settings → General tab → Customize download panel in browsers.
 			</td>
